<resources>
    <string name="app_name">G Notes</string>
    <string name="add_note">Add Note</string>
    <string name="et_hint_enter_your_note_here">Enter Your Note Here..</string>
    <string name="save_note">Save Note</string>
    <string name="btn_show_settings">Settings</string>
    <string name="enter_title">Enter Title</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <string name="app_theme">theme</string>
    <string name="pref_theme_key">key</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>

    <string name="delete_note_confirm">Delete note?</string>
    <string name="delete">Delete</string>

    <string name="show_settings">Show settings</string>
    <string name="more">More</string>
    <string name="edit_title">Edit title</string>
    <string name="delete_note">Delete note</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <string name="unarchived">Unarchived</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_added">Sort by added</string>
    <string name="show_archived_only">Show archived only</string>
    <string name="sort_by_last_modified">Sort by last modified</string>
    <string name="no_notes">No notes yet…</string>
    <string name="no_archived_notes">No archived notes yet…</string>
    <string name="empty_notes_image">Empty notes image</string>

    <string name="theme_preferences_key">theme_preferences_key</string>

    <string name="dark_theme_preference_value">0</string>
    <string name="light_theme_preference_value">1</string>
    <string name="system_theme_preference_value">2</string>

    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">System default</string>
</resources>